[gd_scene load_steps=10 format=2]

[ext_resource path="res://textures/Enemies.png" type="Texture" id=1]
[ext_resource path="res://enemies/BoneDragon.gd" type="Script" id=2]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://enemies/Enemy.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 8 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 43.25, 213 )

[sub_resource type="Animation" id=4]
resource_name = "Awaken"
length = 1.2
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Parts/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -10, 0 ), Vector2( -63, 3.76588e-13 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Parts/Neck:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -45, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Parts/Neck2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -3.8147e-06 ), Vector2( -36, -3.8147e-06 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Parts/Neck3:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -27, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Parts/Neck4:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -18, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Parts/Neck5:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -9, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Parts/Head:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Parts/Head/Sprite:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 114 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Parts/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -10, 7.10543e-14 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Parts/Neck:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Parts/Neck2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -3.8147e-06 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Parts/Neck3:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Parts/Neck4:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Parts/Neck5:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Parts/Head:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Parts/Head/Sprite:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 114 ]
}

[node name="BoneDragon" type="Node2D" groups=["AffectedByClock", "AffectedByRosary"]]
script = ExtResource( 2 )

[node name="Enemy" type="Node" parent="."]
script = ExtResource( 4 )
enemyName = "Bone Dragon"
damage = 3
points = 1000
weakHits = 8
strongHits = 7
hitbox = NodePath("../Parts/Head/Hitbox")
drop = "random"

[node name="Parts" type="Node2D" parent="."]

[node name="Neck" type="RigidBody2D" parent="Parts"]
collision_layer = 8
collision_mask = 0
mode = 2

[node name="Sprite" type="Sprite" parent="Parts/Neck"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 160, 96, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parts/Neck"]
shape = SubResource( 2 )

[node name="Joint" type="DampedSpringJoint2D" parent="Parts/Neck"]
position = Vector2( -14, 0 )
node_a = NodePath("..")
node_b = NodePath("../../Head")
length = 2.0
stiffness = 64.0

[node name="Hitbox" parent="Parts/Neck" instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parts/Neck/Hitbox"]
shape = SubResource( 2 )

[node name="Neck2" type="RigidBody2D" parent="Parts"]
position = Vector2( 0, -3.8147e-06 )
collision_layer = 8
collision_mask = 0
mode = 2

[node name="Sprite" type="Sprite" parent="Parts/Neck2"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 160, 96, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parts/Neck2"]
shape = SubResource( 2 )

[node name="Joint" type="DampedSpringJoint2D" parent="Parts/Neck2"]
position = Vector2( -9.00001, 3.8147e-06 )
node_a = NodePath("..")
node_b = NodePath("../../Neck")
length = 4.0
stiffness = 48.0

[node name="Hitbox" parent="Parts/Neck2" instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parts/Neck2/Hitbox"]
shape = SubResource( 2 )

[node name="Neck3" type="RigidBody2D" parent="Parts"]
collision_layer = 8
collision_mask = 0
mode = 2

[node name="Sprite" type="Sprite" parent="Parts/Neck3"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 160, 96, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parts/Neck3"]
shape = SubResource( 2 )

[node name="Joint" type="DampedSpringJoint2D" parent="Parts/Neck3"]
position = Vector2( -9, 0 )
node_a = NodePath("..")
node_b = NodePath("../../Neck2")
length = 6.0
stiffness = 24.0

[node name="Hitbox" parent="Parts/Neck3" instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parts/Neck3/Hitbox"]
shape = SubResource( 2 )

[node name="Neck4" type="RigidBody2D" parent="Parts"]
collision_layer = 8
collision_mask = 0
mode = 2

[node name="Sprite" type="Sprite" parent="Parts/Neck4"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 160, 96, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parts/Neck4"]
shape = SubResource( 2 )

[node name="Joint" type="DampedSpringJoint2D" parent="Parts/Neck4"]
position = Vector2( -9, 0 )
node_a = NodePath("..")
node_b = NodePath("../../Neck3")
length = 4.0
stiffness = 24.0
damping = 0.9

[node name="Hitbox" parent="Parts/Neck4" instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parts/Neck4/Hitbox"]
shape = SubResource( 2 )

[node name="Neck5" type="RigidBody2D" parent="Parts"]
collision_layer = 8
collision_mask = 0
mode = 2

[node name="Sprite" type="Sprite" parent="Parts/Neck5"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 160, 96, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parts/Neck5"]
shape = SubResource( 2 )

[node name="Joint" type="DampedSpringJoint2D" parent="Parts/Neck5"]
position = Vector2( -9, 0 )
node_a = NodePath("..")
node_b = NodePath("../../Neck4")
length = 4.0
stiffness = 48.0
damping = 0.7

[node name="Hitbox" parent="Parts/Neck5" instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parts/Neck5/Hitbox"]
shape = SubResource( 2 )

[node name="Neck6" type="StaticBody2D" parent="Parts"]
position = Vector2( -7.62939e-06, 0 )
collision_layer = 8
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Parts/Neck6"]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 160, 96, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parts/Neck6"]
shape = SubResource( 2 )

[node name="Joint" type="DampedSpringJoint2D" parent="Parts/Neck6"]
position = Vector2( -9, 0 )
node_a = NodePath("..")
node_b = NodePath("../../Neck5")
length = 4.0
stiffness = 64.0
damping = 0.5

[node name="Hitbox" parent="Parts/Neck6" instance=ExtResource( 3 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parts/Neck6/Hitbox"]
shape = SubResource( 2 )

[node name="Head" type="StaticBody2D" parent="Parts"]
position = Vector2( -10, 7.10543e-14 )
rotation = 3.14159
collision_layer = 8
collision_mask = 0

[node name="Sprite" type="Sprite" parent="Parts/Head"]
position = Vector2( -5, 0 )
scale = Vector2( -1, -1 )
texture = ExtResource( 1 )
hframes = 15
vframes = 8
frame = 114

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parts/Head"]
position = Vector2( -5, 0 )
shape = SubResource( 1 )

[node name="Hitbox" parent="Parts/Head" instance=ExtResource( 3 )]
position = Vector2( -5, 0 )
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Parts/Head/Hitbox"]
shape = SubResource( 1 )

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 1.2
autostart = true

[node name="ActivateArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivateArea"]
position = Vector2( -73.75, 13 )
shape = SubResource( 3 )

[node name="DeactivateArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeactivateArea"]
position = Vector2( 257, 13 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Awaken = SubResource( 4 )
anims/RESET = SubResource( 5 )

[connection signal="killed" from="Enemy" to="." method="_on_Enemy_killed" flags=6]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="body_entered" from="ActivateArea" to="." method="_on_ActivateArea_body_entered" flags=6]
[connection signal="body_entered" from="DeactivateArea" to="." method="_on_DeactivateArea_body_entered" flags=6]
